--- a/style.css
+++ b/style.css
@@ -1,8 +1,50 @@
-/* h1{
+*{
+    font-family: 'Courier New', Courier, monospace;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    min-height: 100vh;
+    background: linear-gradient(65deg, rgb(181, 41, 231),   rgb(216, 43, 43));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1{
+    color: rgb(red, green, blue);
+    margin-top: 100px;
+}
+
+form{
+    margin-top: 50px;
+    background: #fff;
+    box-shadow: -3px 6px 4px;
+}
+
+form input{
+    width: 500px;
+    height: 40px;
+    outline: none;
+    padding: 0.5px;
     text-align: center;
 }
 
-.list{
-    display: flex;
+
+::placeholder {
+    text-align: center;
+    width: 100%;
 }
- */
+
+#btn{
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    border: none;
+    background: teal;
+    color: white;
+    outline: none;
+    cursor: pointer;
+}
